# chatnet

./: Cargo.toml
src/bins/: client_side.rs  server.rs
src/client/: mod.rs  peer.rs
src/server/: mod.rs  server.rs
src/utils/: mod.rs  ringbuf.rs  shared.rs
